Small fix to last commit, hiding both overflow axis.

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ nav.transition-enabled {
   gap: 2rem;
   width: max-content;
   cursor: grab;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .project-grid:active {
